Bug 61564 - REPORTBUILDER: Creating a basic report crashes
Summary: REPORTBUILDER: Creating a basic report crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3
Keywords:
Depends on: 61725
Blocks: Database-Reports-Builder-MAB 61726
  Show dependency treegraph
 
Reported: 2013-02-27 17:45 UTC by Julien Nabet
Modified: 2013-03-12 16:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
typescript with backtrace (692.55 KB, text/plain)
2013-03-01 00:55 UTC, Terrence Enger
Details
screenshot (66.16 KB, image/png)
2013-03-02 15:02 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2013-02-27 17:45:55 UTC
Problem description:
On a brand new Base file (hsqldb) with just 1 table, when I try to create a report with wizard it crashes at the end. 

Steps to reproduce:
1. Create a brand new Base file (hsqldb)
2. Create a simple table with some fieds 
3. Launch report creation with wizard
4. Select just 1 field
5. Click Finish
Current behavior:
Crash
Expected behavior:
No Crash

Console logs show:
Feb 27, 2013 6:40:32 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
SEVERE: Detected an IncompatibleClassChangeError
warn:legacy.tools:8169:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:8169:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:8169:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:8169:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:svx.uno:8169:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:8169:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
Feb 27, 2013 6:40:32 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
SEVERE: Detected an IncompatibleClassChangeError
terminate called after throwing an instance of 'com::sun::star::lang::WrappedTargetException'
warn:legacy.osl:8169:1:tools/source/rc/resmgr.cxx:740: file:///home/julien/compile-libreoffice/libo/solver/unxlngx6/installation/opt/program/../program/resource/svten-US.res
Class: StarOffice 3.0 - 5.0 Template, Id: 0. Different class and resource type!
Resource Stack
Class: OpenOffice.org 1.0 Drawing Template, Id: 16392Class: OpenOffice.org 1.0 Drawing Template, Id: 16391
warn:legacy.osl:8169:1:framework/source/services/autorecovery.cxx:1187: need at document, at the very least

No crash when using Design View
Operating System: Debian
Version: 4.1.0.0.alpha0+ Master
Comment 1 Julien Nabet 2013-02-27 17:48:28 UTC
Forgot to tell configuration elements.
On pc Debian x86-64 with master sources updated today + "make clean && make" and a brand new LO profile.

gcc (Debian 4.7.2-5) 4.7.2

java version "1.7.0_03"
OpenJDK Runtime Environment (IcedTea7 2.1.3) (7u3-2.1.3-1)
OpenJDK 64-Bit Server VM (build 22.0-b10, mixed mode)
Comment 2 Julien Nabet 2013-02-27 17:49:12 UTC
Terrence: would you have some time to give it a try in order to confirm (or not)?
Comment 3 Terrence Enger 2013-03-01 00:55:47 UTC
Created attachment 75715 [details]
typescript with backtrace

typescript of failing run

I can reproduce the failure, which is a Signal 6, SIGABRT.

In the typescript, there are lots of warnings and error messages.  At
line 1283, I see ...

    Feb 28, 2013 1:55:11 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
    SEVERE: Detected an IncompatibleClassChangeError
    warn:legacy.tools:2986:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
    warn:legacy.tools:2986:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
    warn:legacy.tools:2986:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
    warn:legacy.tools:2986:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
    warn:svx.uno:2986:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
    warn:svx.uno:2986:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
    Feb 28, 2013 1:55:12 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
    SEVERE: Detected an IncompatibleClassChangeError
    terminate called after throwing an instance of 'com::sun::star::lang::WrappedTargetException'
    Application Error


    Fatal exception: Signal 6

and at line 1917 a gdb backtrace starts.


Frame 24 of that backtrace reads ...

    #24 0xb2cdb06b in dbaccess::ODocumentContainer::loadComponentFromURL (this=0x9216f88, _sURL=..., Arguments=...) at /home/terry/lo_hacking/git/libo2/dbaccess/source/core/dataaccess/documentcontainer.cxx:522

and the source code in that area is ...

    519: Reference< XComponent
                  > SAL_CALL ODocumentContainer::loadComponentFromURL
                        ( const OUString& _sURL
    520:                , const OUString& /*TargetFrameName*/
    521:                , sal_Int32 /*SearchFlags*/
    522:                , const Sequence< PropertyValue >& Arguments
                        ) throw (IOException
                                , IllegalArgumentException
                                , RuntimeException
                                )
    523: {
    524:     ::SolarMutexGuard aSolarGuard;

From a subsequent gdb session, I think that the exception originated
in line 554 ...

                     xComp.set
                         (xContent->execute
                             (aCommand,xContent->createCommandIdentifier()
                             ,Reference< XCommandEnvironment >()
                             )
                         ,UNO_QUERY
                         );


I have made a similar failure with an ODBC connection to PostgreSQL.
For comparison, I see no crash in 4.0.1.1 (2c0c17a).


These observations are from master, commit2e367c0, pulled 2013-02-17,
built and exectuing on ubuntu-natty (11.04) 32-bit, configured as ...

    --enable-dbgutil
    --enable-crashdump
    --disable-build-mozilla
    --without-system-postgresql
    --without-myspell-dicts
    --without-help
    --with-extra-buildid


Terry.
Comment 4 Julien Nabet 2013-03-01 10:14:47 UTC
Thank you Terrence for having confirmed this one.
I put Lionel on cc.
Comment 5 Lionel Elie Mamane 2013-03-02 07:03:31 UTC
What I find scary here is:

com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
SEVERE: Detected an IncompatibleClassChangeError


That's a Java error that "just should not happen", especially after make clean && make.

I think we need a Java expert here.

I first see the WrappedTargetException that wraps this Java error in
reportdesign::OReportEngineJFree::getNewOutputName
file reportdesign/source/core/api/ReportEngineJFree.cxx
where it is caught and rethrown.

However, it is caught in
rptui::OReportController::getPreferredVisualRepresentation
file reportdesign/source/ui/report/ReportController.cxx


Ah, but it comes up again later, in the context described by Terrence. OK, I'm fixing the crash, which will allow us to see the real underlying problem, but IMHO we need a Java expert to go forward.
Comment 6 Not Assigned 2013-03-02 07:15:38 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9330b97595ff899dbea40ced6656f8c39c76c959

fdo#61564 when WrappedTargetException not in specification, do not throw it!



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Julien Nabet 2013-03-02 07:48:04 UTC
Thank you Lionel for your feedback!
I retrieved your commit, I'll give a new try after building is finished.

BTW, following Alex's comment 26 (see https://bugs.freedesktop.org/show_bug.cgi?id=48056#c26), I added fdo#48056 in "see also".
Comment 8 Julien Nabet 2013-03-02 15:02:44 UTC
Created attachment 75781 [details]
screenshot

Here are the logs:
Mar 02, 2013 3:53:08 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
SEVERE: Detected an IncompatibleClassChangeError
warn:legacy.tools:6359:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:6359:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:6359:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:legacy.tools:6359:1:toolkit/source/awt/vclxtoolkit.cxx:1092: createWindow: Unknown Component!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
warn:svx.uno:6359:1:svx/source/svdraw/svdobj.cxx:2961: a UNO shape took over an SdrObject previously owned by another UNO shape!
Mar 02, 2013 3:53:08 PM com.sun.star.report.pentaho.SOReportJobFactory$_SOReportJobFactory execute
SEVERE: Detected an IncompatibleClassChangeError
warn:legacy.osl:6359:1:dbaccess/source/ui/dlg/sqlmessage.cxx:269: lcl_buildExceptionChain: useles exception: no state, no error code, no message!

For retrieving this, I had to comment assert line (1751) in vcl/source/app/dbggui.cxx
because I had another crash before with these console logs:
warn:legacy.osl:6643:1:vcl/source/app/dbggui.cxx:1750: SolarMutex not locked
soffice.bin: /home/julien/compile-libreoffice/libo/vcl/source/app/dbggui.cxx:1751: void ImplDbgTestSolarMutex(): Assertion `bCheck' failed.
Comment 9 Lionel Elie Mamane 2013-03-03 05:39:21 UTC
Moving the Java exception to its own bug 61726 for clarity of discussion, and reserving this bug for the abort that this exception previously caused (which is now fixed).
Comment 10 Commit Notification 2013-03-12 16:01:39 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6b26441f4b01f4e01390b9a5b4710d0932751a93&h=libreoffice-4-0

fdo#61564 when WrappedTargetException not in specification, do not throw it!


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.