fdo#61564 when WrappedTargetException not in specification, do not throw it!

Change-Id: Id3c995557f320b1d0241f0ef5d94b1c9aeb66528